Fixed overflow problem

--- a/8-carousel/carousel/carousel.css
+++ b/8-carousel/carousel/carousel.css
@@ -1,3 +1,10 @@
+#carousel {
+  position: relative;
+  overflow-x: hidden;
+  width: 100%;
+  height: 60vh;
+}
+
 .item-carousel {
   position: absolute;
   width: 100%;
